# bspot-python

./: .gitignore  .gitmodules  BSP-OT_header_only.h  CMakeLists.txt  LICENSE  README.md  module.cpp  pyproject.toml
.github/workflows/: wheels.yml
bspot/: __init__.py
bspot/f32/: __init__.py
scripts/: build_libomp_macos.sh
tests/: test_bspot.py
