[build-system]
requires = ["scikit-build-core>=0.4.3", "cmake>=3.15", "ninja", "scipy>=1.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "bspot"
version = "0.0.1"
description = "Python bindings to BSP-OT"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["ext"]

[tool.cibuildwheel.macos]
before-build = "bash scripts/build_libomp_macos.sh"
environment = "MACOSX_DEPLOYMENT_TARGET=11.0 OpenMP_ROOT=.cibw/libomp CMAKE_PREFIX_PATH=.cibw/libomp"
