[build-system]
requires = ["scikit-build-core>=0.4.3", "cmake>=3.15", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "bspot"
version = "1.0.0"
description = "Python bindings to BSP-OT"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Kenshi Takayama", email = "kenshi84@gmail.com"}]

[project.urls]
Homepage = "https://github.com/kenshi84/bspot-python"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["ext"]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.scikit-build.cmake]
build-type = "Release"

[tool.cibuildwheel]
archs = "auto64"
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = ["pytest", "numpy", "scipy"]

# linux images
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"

[tool.cibuildwheel.macos]
before-build = "bash scripts/build_libomp_macos.sh"
environment = "MACOSX_DEPLOYMENT_TARGET=11.0 OpenMP_ROOT=.cibw/libomp CMAKE_PREFIX_PATH=.cibw/libomp"
